backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      containers:
      - name: backend
        image: 192.168.1.61:5000/backend:v1.9
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false

        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
